chore(deploy): configure Cloudflare deployment with SSR
- Switch Astro output to server mode for SSR
- Add Cloudflare adapter for Workers deployment
- Update dependencies: add @astrojs/cloudflare, google-auth-library, zod
- Add allowed hosts for ngrok tunneling

Prepares the application for server-side rendering and
Cloudflare Workers deployment environment.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,7 @@
 {
   "name": "acimu",
   "compatibility_date": "2025-10-22",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "directory": "./dist",
   },
