fix(build): prevent _worker.js upload as asset
- Add .assetsignore creation to build script to exclude
  _worker.js directory from being uploaded as public asset
- Update .env.example with missing Google Calendar and
  Turnstile configuration variables

This fixes Cloudflare Pages deployment error where _worker.js
was being uploaded as a public asset, which could expose
server-side code. The build script now automatically creates
.assetsignore after each build to prevent this.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@ PUBLIC_PRICE_PLANOS_VOZ=0
 PUBLIC_PRICE_APROBACION=0
 PUBLIC_PRICE_VISITA=0
 CDN_URL=https://cdn.example.com
+GOOGLE_PROJECT_ID=your-google-id
+GOOGLE_CLIENT_EMAIL=your-google-client-mail
+GOOGLE_PRIVATE_KEY=your-google-private-key
+GOOGLE_CALENDAR_ID=your-google-client-id
+TURNSTILE_SECRET_KEY=your-turnstile-secret-key
+TURNSTILE_SITE_KEY=your-turnstile-site-key
