fix(deploy): correct Cloudflare Pages SSR config
- Replace assets.directory with pages_build_output_dir in
  wrangler.jsonc to properly handle Astro SSR output
- Remove .assetsignore creation from build script as it's
  no longer needed

This fixes 404 errors on API routes (/api/calendar/book) in
production. The assets.directory config was treating the
_worker.js directory as static assets instead of server code,
preventing SSR routes from executing. pages_build_output_dir
correctly instructs Cloudflare to process the full Astro SSR
build including the worker and dynamic routes.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,7 +2,5 @@
   "name": "acimu",
   "compatibility_date": "2025-10-22",
   "compatibility_flags": ["nodejs_compat"],
-  "assets": {
-    "directory": "./dist",
-  },
+  "pages_build_output_dir": "./dist",
 }
