--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,10 @@
 {
   "name": "acimu",
+  "main": "dist/_worker.js/index.js",
   "compatibility_date": "2025-10-22",
   "compatibility_flags": ["nodejs_compat"],
-  "pages_build_output_dir": "./dist",
+  "assets": {
+    "directory": "dist",
+    "binding": "ASSETS",
+  },
 }
